objects/Intake__c.object
<CustomObject>
    <description>To capture and store initial information about clients/prospects during the intake process including New Intake, New Education Only, and New Emergency Triage.</description>
    <fields>
        <fullName>AMIAtStartOfClientCase__c</fullName>
        <label>AMI at Start of Client Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Below 30% of AMI</fullName>
                </value>
                <value>
                    <fullName>30% - 49% AMI</fullName>
                </value>
                <value>
                    <fullName>50% - 79% AMI</fullName>
                </value>
                <value>
                    <fullName>80% - 100% AMI</fullName>
                </value>
                <value>
                    <fullName>101% - 120% AMI</fullName>
                </value>
                <value>
                    <fullName>Above 120% of AMI</fullName>
                </value>
                <value>
                    <fullName>Chose not to respond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ActiveMilitary__c</fullName>
        <label>Active Military</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>AnnualHouseholdIncome__c</fullName>
        <formula>HouseholdMonthlyIncome__c * 12</formula>
        <label>Annual Household Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AreaMedianIncome__c</fullName>
        <label>Area Median Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Below 30% of AMI</fullName>
                </value>
                <value>
                    <fullName>30 - 49% of AMI</fullName>
                </value>
                <value>
                    <fullName>50 - 79% of AMI</fullName>
                </value>
                <value>
                    <fullName>80 - 100% of AMI</fullName>
                </value>
                <value>
                    <fullName>101% - 120% of AMI</fullName>
                </value>
                <value>
                    <fullName>Above 120% of AMI</fullName>
                </value>
                <value>
                    <fullName>Chose not to respond</fullName>
                </value>
                <value>
                    <fullName>Above 100% AMI</fullName>
                    <isActive>false</isActive>
                    <label>Above 100% AMI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseSubType__c</fullName>
        <label>Case Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NW Rehab</fullName>
                    <default>true</default>
                    <label>NW Rehab</label>
                </value>
                <value>
                    <fullName>NW Refinance Non-Foreclosure</fullName>
                </value>
                <value>
                    <fullName>NW Client Other Based Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Type</label>
        <referenceTo>CaseType__c</referenceTo>
        <relationshipName>Intakes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChoseNottoProvideIncome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chose Not to Provide Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientCaseClosedDate__c</fullName>
        <label>Client Case Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientHUDAssistance__c</fullName>
        <label>Client HUD Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rental Voucher</fullName>
                </value>
                <value>
                    <fullName>Place Based Rental Assistance</fullName>
                </value>
                <value>
                    <fullName>Home Ownership Voucher</fullName>
                </value>
                <value>
                    <fullName>Purchase REO Property</fullName>
                </value>
                <value>
                    <fullName>Down Payment Assistance</fullName>
                </value>
                <value>
                    <fullName>Other HUD Program</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientNumber__c</fullName>
        <formula>Household__r.ClientNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ColoniasResidence__c</fullName>
        <label>Colonias Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactType__c</fullName>
        <formula>PrimaryClient__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselorName__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Counselor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountyMSA__c</fullName>
        <label>County/MSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditScore__c</fullName>
        <label>Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentResidence__c</fullName>
        <label>Current Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CurrentResidenceClientCase</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateAMILastCalculated__c</fullName>
        <label>Date AMI Last Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DisabledStatus__c</fullName>
        <label>Disabled Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Education</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full-Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part-Time</fullName>
                </value>
                <value>
                    <fullName>Unemployed AND Looking for Work</fullName>
                </value>
                <value>
                    <fullName>Unable to Work Due to Disability</fullName>
                </value>
                <value>
                    <fullName>Stay-at-Home Caregiver OR Parent</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Employed Full-Time AND Student</fullName>
                </value>
                <value>
                    <fullName>Employed Part-Time AND Student</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnglishProficiency__c</fullName>
        <description>HUD-Defined English Proficiency</description>
        <inlineHelpText>English Proficiency of the primary client</inlineHelpText>
        <label>English Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Limited_English_Proficiency_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EvaluateHUDAMI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EvaluateHUDAMI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FarmWorker__c</fullName>
        <label>Farm Worker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Capability_Goals__c</fullName>
        <label>Financial Capability Goals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Score and/or resolved credit issues</fullName>
                </value>
                <value>
                    <fullName>Establish credit history</fullName>
                </value>
                <value>
                    <fullName>Fewer debts past-due</fullName>
                </value>
                <value>
                    <fullName>Increase savings</fullName>
                </value>
                <value>
                    <fullName>Spend less on financial services</fullName>
                </value>
                <value>
                    <fullName>Increase amount of appropriate insurance coverage</fullName>
                </value>
                <value>
                    <fullName>Have sufficient savings to cover at least three months of basic living expenses</fullName>
                </value>
                <value>
                    <fullName>Establish savings for a specific goal</fullName>
                </value>
                <value>
                    <fullName>Increased in tax benefit</fullName>
                </value>
                <value>
                    <fullName>Stabilize housing (at risk of eviction or foreclosure)</fullName>
                </value>
                <value>
                    <fullName>Increase access to credit</fullName>
                </value>
                <value>
                    <fullName>Fewer accounts in collections</fullName>
                </value>
                <value>
                    <fullName>Reduce level of debt</fullName>
                </value>
                <value>
                    <fullName>Increase net worth</fullName>
                </value>
                <value>
                    <fullName>Engage in new financial products</fullName>
                </value>
                <value>
                    <fullName>Increase ability to manage fluctuations income</fullName>
                </value>
                <value>
                    <fullName>Decrease costs of tax filing</fullName>
                </value>
                <value>
                    <fullName>Optimize public benefits portfolio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <label>Funder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FHA</fullName>
                </value>
                <value>
                    <fullName>FHLMC</fullName>
                </value>
                <value>
                    <fullName>Glendale</fullName>
                </value>
                <value>
                    <fullName>HASC-West-1</fullName>
                </value>
                <value>
                    <fullName>HFM</fullName>
                </value>
                <value>
                    <fullName>HUD</fullName>
                </value>
                <value>
                    <fullName>IDA Program</fullName>
                </value>
                <value>
                    <fullName>LEAD</fullName>
                </value>
                <value>
                    <fullName>Lexington</fullName>
                </value>
                <value>
                    <fullName>Louisville</fullName>
                </value>
                <value>
                    <fullName>Low Mod Builders</fullName>
                </value>
                <value>
                    <fullName>NeighborWorks</fullName>
                </value>
                <value>
                    <fullName>Section 8 HACSJ</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>World Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HouseholdMonthlyIncome__c</fullName>
        <label>Household Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HouseholdOfAMI__c</fullName>
        <label>Household % Of AMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HouseholdSize__c</fullName>
        <label>Household Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseholdType__c</fullName>
        <label>Household Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MaritalStatus__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>HouseholdTypeHeadofHousehold</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Intake_Only</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntakeDate__c</fullName>
        <label>Intake Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IntakeRequestName__c</fullName>
        <formula>PrimaryClient__r.LastName + &quot;, &quot;+ IF(ISNULL(PrimaryClient__r.FirstName) ,&apos;&apos;,MID(PrimaryClient__r.FirstName, 0, 1)) + &quot; - &quot;+ text(DATEVALUE(CreatedDate)) +&quot; - &quot;+ CaseType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intake Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritalStatus__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MaritalStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketingCommunicationsOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Communications Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetropolitanStatisticalArea__c</fullName>
        <label>Metropolitan Statistical Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyCreditorsDebt__c</fullName>
        <label>Monthly Creditor’s Debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyIncome__c</fullName>
        <label>Total Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberofDependents__c</fullName>
        <label>Number of Dependents</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OccupationStartDate__c</fullName>
        <label>Occupation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalIntake__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Intake</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreCounselingCreditScore__c</fullName>
        <label>Pre-Counseling Credit Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreCounselingHouseholdDebt__c</fullName>
        <label>Pre-Counseling Household Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreCounselingResidenceType__c</fullName>
        <label>Pre-Counseling Residence Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rent from a property owned/managed by your organization</fullName>
                </value>
                <value>
                    <fullName>Rent from a property not owned/managed by your organization</fullName>
                </value>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Live with Family Rent-Free</fullName>
                </value>
                <value>
                    <fullName>Other Residence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreCounselingSavings__c</fullName>
        <label>Pre-Counseling Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Intake_Only</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>HUD Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Homeless Assistance</fullName>
                </value>
                <value>
                    <fullName>Pre-purchase/Homebuying</fullName>
                </value>
                <value>
                    <fullName>Rental Topics</fullName>
                </value>
                <value>
                    <fullName>Non-Delinquency Post-Purchase</fullName>
                </value>
                <value>
                    <fullName>Reverse Mortgage</fullName>
                </value>
                <value>
                    <fullName>Resolving or Preventing Forward Mortgage Delinquency or Default</fullName>
                </value>
                <value>
                    <fullName>Resolving or Preventing Reverse Mortgage Delinquency or Default</fullName>
                </value>
                <value>
                    <fullName>Disaster Preparedness Assistance</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery Assistance</fullName>
                </value>
                <value>
                    <fullName>Not HUD-Reportable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Race</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferralSource__c</fullName>
        <label>Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ReferralSource</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RuralAreaStatus__c</fullName>
        <label>Rural Area Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rural_Area_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Intake Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Closed - Incomplete</fullName>
                </value>
                <value>
                    <fullName>Open Intake</fullName>
                    <default>true</default>
                    <label>Open Intake</label>
                </value>
                <value>
                    <fullName>Open Case</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                    <isActive>false</isActive>
                    <label>Converted</label>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Town__c</fullName>
        <label>Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationCombined__c</fullName>
        <formula>IF( isInvalidZip__c,&apos;Invalid Zip Code/County/Town Entered!&apos; , IF(EvaluateHUDAMI__c , &apos;Please Search County By Zip Code to Calculate HUD AMI&apos;, &apos;NO ERROR&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Combined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veteran__c</fullName>
        <label>Veteran</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Veteran</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1stTimeHomeBuyer__c</fullName>
        <label>1st Time Home Buyer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isInvalidZip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isInvalidZip</label>
        <type>Checkbox</type>
    </fields>
    <label>Intake</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IntakeRequestName__c</columns>
        <columns>Status__c</columns>
        <columns>PrimaryClient__c</columns>
        <columns>ContactType__c</columns>
        <columns>IntakeDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CounselorName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ConvertedIntakeCase</fullName>
        <columns>NAME</columns>
        <columns>IntakeRequestName__c</columns>
        <columns>Status__c</columns>
        <columns>PrimaryClient__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open Case</value>
        </filters>
        <label>Converted Intake Case</label>
    </listViews>
    <listViews>
        <fullName>NewIntakeCases</fullName>
        <columns>NAME</columns>
        <columns>IntakeRequestName__c</columns>
        <columns>Status__c</columns>
        <columns>PrimaryClient__c</columns>
        <columns>ContactType__c</columns>
        <columns>IntakeDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CounselorName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Open Case,Closed - Incomplete</value>
        </filters>
        <label>New Intake Cases</label>
    </listViews>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Intake</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intakes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CreditScoreFormat</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($Setup.AutomationBypass__c.IntakeAutomationBypass__c),
NOT(ISBLANK(CreditScore__c)) &amp;&amp; NOT( REGEX(TEXT(CreditScore__c), &quot;[0-9]{3}&quot;) )
)</errorConditionFormula>
        <errorDisplayField>CreditScore__c</errorDisplayField>
        <errorMessage>Credit Score must be 3 Digit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HouseholdSizeLimitRule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($Setup.AutomationBypass__c.IntakeAutomationBypass__c),OR( (HouseholdSize__c &lt; 1), (HouseholdSize__c &gt; 99))
)</errorConditionFormula>
        <errorDisplayField>HouseholdSize__c</errorDisplayField>
        <errorMessage>Household size should be between 1 to 99</errorMessage>
    </validationRules>
</CustomObject>